--- a/src/styles.css
+++ b/src/styles.css
@@ -67,6 +67,16 @@ ul li {
   transform: translateX(-50%);
 }
 
+.btn-show-text {
+  bottom: 5%;
+  left:5%;
+}
+
+.btn-edit {
+  right:5%;
+  top:5%;
+}
+
 footer {
   bottom: 0;
   margin: 0;
