--- a/src/styles.css
+++ b/src/styles.css
@@ -17,10 +17,15 @@ input,textarea {
   font-size: 20px;
   text-align: center;
   overflow: wrap;
+  min-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 textarea {
   height: 70%;
+  resize: none;
 }
 
 header {
@@ -44,6 +49,7 @@ ul {
 
 ul li {
   width: 40%;
+  min-width: 300px;
   height: 200px;
   position: relative;
   list-style: none;
@@ -81,6 +87,15 @@ footer {
   margin: 0;
 }
 
-form {
+.hidden {
   display: none;
+}
+
+button {
+  border-radius: 5px;
+  background-color: rgb(243, 215, 174);
+}
+
+button:hover {
+  cursor: pointer;
 }
